[project]
name = "ctxt-practic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "dotenv>=0.9.9",
    "openai-agents>=0.4.2",
    "rich>=14.2.0",
]

[project.scripts]
ctxt-practic = "ctxt_practic:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
